# DExTaR

./: CMakeLists.txt  README.md
External_Binaries/: CMakeLists.txt  abyss-download.cmake  abyss.cmake
External_Libraries/: CMakeLists.txt  boost-download.cmake  boost.cmake
src/: DExTaR.cpp
